# sonarqube_unit_test

./: CMakeLists.txt  main.cpp  mul.cpp  sonar-project.properties
.github/workflows/: ci-sonarqube.yml
test/: test_mul.cpp
